--- a/app/views/paintings/show.html.erb
+++ b/app/views/paintings/show.html.erb
@@ -5,7 +5,6 @@
         <div class="row justify-content-center">
           <h1><%= @painting.name %></h1>
 
-
         </div>
 
 
@@ -39,13 +38,17 @@
         <% elsif user_signed_in?%>
           <p>Posted by: <%= @user.first_name %></p>
           <!-- add reviews for the painting owner? -->
-          <%= link_to 'Book', new_painting_booking_path(@painting), class: "btn btn-dark" %> <br>
+
+          <div class="row justify-content-center">
+
+            <%= link_to 'Book', new_painting_booking_path(@painting), class: "btn btn-dark" %> <br>
+
 
         <% end %>
 
+            <%= link_to 'Back', paintings_path, class: "btn btn-light" %>
 
-
-        <%= link_to 'Back', paintings_path, class: "btn btn-light" %>
+          </div>
       </div>
 
   </div>
