--- a/app/views/paintings/new.html.erb
+++ b/app/views/paintings/new.html.erb
@@ -1,13 +1,12 @@
-
-<div class="row justify-content-center">
-  <h1>Rent out your painting</h1>
+<div class="container">
+  <div class="card-white">
+    <div class="row justify-content-center">
+      <h1>Rent out your painting</h1>
+      <p id="notice"><%= notice %></p>
+      <%= render partial: 'paintings/form', locals: {model: @painting, url: paintings_path, verb: :post} %>
+      <%= link_to 'Back', paintings_path %>
+    </div>
+  </div>
 </div>
 
-<p id="notice"><%= notice %></p>
-
-<%= render partial: 'paintings/form', locals: {model: @painting, url: paintings_path, verb: :post} %>
-
-<div class="row justify-content-center">
-  <%= link_to 'Back', paintings_path %>
-</div>
 
