--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,22 +1,24 @@
 <div class="container">
-  <h1>Your Booking Information</h1>
+  <div class="card-white">
+    <h1>Your Booking Information</h1>
 
-  <div class="booking-details">
-    <p>You have booked <%= @painting.name %></p>
-    <p><%= @booking.status %> - awaiting approval from <%= @user.first_name %></p>
-    <p>For the period of <%= @booking.start_date %> to <%= @booking.end_date %></p>
+    <div class="booking-details">
+      <p>You have booked <%= @painting.name %></p>
+      <p><%= @booking.status %> - awaiting approval from <%= @user.first_name %></p>
+      <p>For the period of <%= @booking.start_date %> to <%= @booking.end_date %></p>
+    </div>
+
+    <div class="painting-image">
+      <!-- insert cloudinary image -->
+      <%= cl_image_tag(@painting.photo.key,
+        width: 400, height: 300, crop: :fill) %>
+    </div>
+
+      <%= link_to 'Manage my booking', edit_booking_path(@booking), class: "btn btn-outline-dark" %><br>
+      <%= link_to 'Cancel my booking', booking_path(@booking), method: :delete, data: { confirm: "Are you sure you wish to cancel your booking?" }, class: "btn btn-ghost" %> <br>
+      <%= link_to 'Return to dashboard', dashboard_path, class: "btn btn-outline-dark" %>
+
+
+
   </div>
-
-  <div class="painting-image">
-    <!-- insert cloudinary image -->
-    <%= cl_image_tag(@painting.photo.key,
-      width: 400, height: 300, crop: :fill) %>
-  </div>
-
-<!-- removed painting details class/div
- -->
-
-  <%= link_to 'Make changes to your booking', edit_booking_path(@booking) %><br>
-  <%= link_to 'Cancel my booking', booking_path(@booking), method: :delete, data: { confirm: "Are you sure you wish to cancel your booking?" } %> <br>
-  <%= link_to 'Return to your dashboard', dashboard_path %>
 </div>
