--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,18 +1,19 @@
 <div class="grid-container">
   <header class="header">
-    <h2>Dashboard</h2>
   </header>
   <aside class="sidenav"></aside>
   <main class="main">
 
-    <div class="main-header">
+    <div class="first-header">
       <h1>Hi <%= @user.first_name %>!</h1>
-
-      <h6>Your bookings</h6>
+      <br> <h3> Welcome to your <strong>Dashboard</strong></h3>
     </div>
 
+    <div class="row justify-content-center">
+      <h2>Your bookings</h2>
+    </div>
 
-    <div class="main-header">
+    <div class="first-container">
           UPCOMING BOOKINGS
       <div class= "upcoming-bookings">
         <% if user_signed_in? && @user.bookings.present? %>
@@ -32,7 +33,11 @@
       </div>
     </div>
 
-    <div class="main-header">
+    <div class="row justify-content-center">
+      <h2>Your Paintings</h2>
+    </div>
+
+    <div class="second-container">
       <div class= "Your listings">
         <% if user_signed_in? && @user.paintings.present? %>
             <% @paintings.each do |painting| %><br>
@@ -63,3 +68,4 @@
       <%= link_to "log out", destroy_user_session_path, method: :delete %>
     </div>
   </footer>
+</div>
