--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -38,7 +38,7 @@
                     <h6><%= painting.name %></h6>
                   </div>
                   <p><%= painting.description %></p>
-                  <p><%= painting.address %></p>
+                  <em><p><%= painting.address %></p></em>
                   <h6> £<%= painting.price %> /per day</h6>
               </div>
             </div>
