--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,71 +1,76 @@
-<div class="grid-container">
-  <header class="header">
-  </header>
-  <aside class="sidenav"></aside>
-  <main class="main">
+
+
 
     <div class="first-header">
       <h1>Hi <%= @user.first_name %>!</h1>
       <br> <h3> Welcome to your <strong>Dashboard</strong></h3>
     </div>
 
+<div class="d-flex">
+
+  <div class="profile-bookings">
+
     <div class="row justify-content-center">
-      <h2>Your bookings</h2>
+      <h2>Your upcoming bookings</h2>
     </div>
 
-    <div class="first-container">
-          UPCOMING BOOKINGS
-      <div class= "upcoming-bookings">
-        <% if user_signed_in? && @user.bookings.present? %>
-          <% @bookings.each do |booking| %>
-            <p><%= booking.painting.name %></p>
-            <p><%= booking.start_date %> until <%= booking.end_date %> </p>
-            <%= link_to 'View Details', booking_path(booking)%><br>
-            <% if booking.painting.photo.attached? %>
+
+
+  <% if user_signed_in? && @user.bookings.present? %>
+    <% @bookings.each do |booking| %>
+      <h6><%= booking.painting.name %></h6>
+      <p><%= booking.start_date %> until <%= booking.end_date %> </p>
+        <%= link_to 'View Details', booking_path(booking)%><br>
+          <% if booking.painting.photo.attached? %>
               <%= cl_image_tag(booking.painting.photo.key,
-              width: 400, height: 300, crop: :fill) %>
-            <% end %>
+                width: 250, height: 150, crop: :fill) %>
           <% end %>
-        <% else %>
-          <p>You do not have any bookings yet!</p>
-          <%= link_to 'Browse paintings for rent', paintings_path %><br>
-        <% end %>
-      </div>
-    </div>
+      <% end %>
+      <% else %>
+        <p>You do not have any bookings yet!</p>
+        <%= link_to 'Browse paintings for rent', paintings_path %><br>
+      <% end %>
+
+  </div>
+
+  <div class="profile-painting">
 
     <div class="row justify-content-center">
       <h2>Your Paintings</h2>
     </div>
 
-    <div class="second-container">
-      <div class= "Your listings">
-        <% if user_signed_in? && @user.paintings.present? %>
-            <% @paintings.each do |painting| %><br>
-              <%= link_to "View your listing for #{painting.name.capitalize}", painting_path(painting) %><br>
-                <% if painting.photo.attached? %>
-                  <%= cl_image_tag(painting.photo.key,
-                  width: 400, height: 300, crop: :fill) %> <br>
-                <% end %>
+
+
+    <div class= "Your listings">
+      <% if user_signed_in? && @user.paintings.present? %>
+        <% @paintings.each do |painting| %><br>
+          <%= link_to "View your listing for #{painting.name.capitalize}", painting_path(painting) %><br>
+            <% if painting.photo.attached? %>
+              <%= cl_image_tag(painting.photo.key,
+                width: 400, height: 300, crop: :fill) %> <br>
             <% end %>
-            <% @incoming_bookings.each do |in_booking|%>
-              <%= in_booking.status %>
-              <p>is booked from <%= in_booking.start_date %> until <%= in_booking.end_date %> </p>
-            <% end %>
-        <% else %>
+          <% end %>
+          <% @incoming_bookings.each do |in_booking|%>
+            <%= in_booking.status %>
+            <p>is booked from <%= in_booking.start_date %> until <%= in_booking.end_date %> </p>
+          <% end %>
+          <% else %>
           <p> You have not uploaded any paintings yet!</p>
           <%= link_to 'Upload your own paintings for rent', new_painting_path %><br>
         <% end %>
       </div>
-    </div>
 
-    </main>
+  </div>
 
-  <footer class="footer">
-
-    <div class="row justify-content-center">
-      <%= link_to 'Back', paintings_path %>
-
-      <%= link_to "log out", destroy_user_session_path, method: :delete %>
-    </div>
-  </footer>
 </div>
+
+    <footer class="footer">
+      <div class="row justify-content-center">
+        <%= link_to 'Back', paintings_path %>
+
+        <%= link_to "log out", destroy_user_session_path, method: :delete %>
+      </div>
+    </footer>
+
+
+
