--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,6 +1,3 @@
-.wrapper{
-  display: grid;
-}
 
 
 .first-header {
@@ -17,6 +14,7 @@
 
 .first-header h3 {
   text-shadow: 2px 2px 8px black;
+  font-weight: 250;
 }
 
 .first-header h1 {
