--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card-white">
     <div class="row justify-content-center">
-      <div class="col-12 col-sm-4 col-lg-4">
+      <div class="col-12 col-sm-10 ">
 
         <h2>Sign up</h2>
 
