--- a/app/views/paintings/_info_window.html.erb
+++ b/app/views/paintings/_info_window.html.erb
@@ -5,3 +5,5 @@
 <% end %>
 <h2><%= painting.name %></h2>
 <p><%= painting.address %></p>
+<%= link_to 'View Details', painting_path(painting), class: "btn btn-dark" %>
+
