--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -56,3 +56,12 @@
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
   border-radius: 4px;
 }
+
+
+hr {
+ width: 80%;
+ height: 1px;
+ margin-top: 1em;
+ margin-bottom: 1em;
+}
+
