--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,17 +1,15 @@
 
-
-
-    <div class="first-header">
-      <h1>Hi <%= @user.first_name %>!</h1>
-      <br> <h3> Welcome to your <strong>Dashboard</strong></h3>
-    </div>
+<div class="first-header">
+  <h1>Hi <%= @user.first_name %>!</h1>
+  <br> <h3> Welcome to your <strong>Dashboard</strong></h3>
+</div>
 
 <div class="d-flex">
 
   <div class="profile-bookings">
 
     <div class="row justify-content-center">
-      <h2>Your upcoming bookings</h2>
+      <h2>Your upcoming bookings</h2> <hr />
     </div>
 
 
@@ -36,7 +34,7 @@
   <div class="profile-painting">
 
     <div class="row justify-content-center">
-      <h2>Your Paintings</h2>
+      <h2>Your Paintings</h2> <hr />
     </div>
 
 
