--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,10 @@
 <div class="container">
   <div class="card-white">
-    <div class="row justify-content-center">
       <div class="col-12 col-sm-10 ">
+        <div class="form-title">
+          <h2>Sign up</h2>
 
-        <h2>Sign up</h2>
-
-        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= f.error_notification %>
 
           <div class="form-inputs">
@@ -27,13 +26,16 @@
                         required: true,
                         input_html: { autocomplete: "new-password" } %>
           </div>
-
+        <div class="row justify-content-center">
           <div class="form-actions">
-            <%= f.button :submit, "Sign up" %>
+            <%= f.button :submit, "Sign up" %> <br>
+            <div class="other-links">
+              <%= render "devise/shared/links" %>
+            </div>
           </div>
         <% end %>
 
-        <%= render "devise/shared/links" %>
+        </div>
       </div>
     </div>
   </div>
