--- a/app/assets/stylesheets/components/_police.scss
+++ b/app/assets/stylesheets/components/_police.scss
@@ -5,7 +5,37 @@ p {
   margin-bottom: 1em ;
 }
 
-h1 h2 h3 h4 h5 h6 {
+h1 {
+  margin-top: 1em ;
+  margin-bottom: 1em ;
+}
+
+h2 {
+  margin-top: 1em ;
+  margin-bottom: 1em ;
+}
+
+h3 {
+  margin-top: 1em ;
+  margin-bottom: 1em ;
+}
+
+h4 {
+  margin-top: 1em ;
+  margin-bottom: 1em ;
+}
+
+h5 {
+  margin-top: 1em ;
+  margin-bottom: 1em ;
+}
+
+h6 {
+  margin-top: 1em ;
+  margin-bottom: 1em ;
+}
+
+a {
   margin-top: 1em ;
   margin-bottom: 1em ;
 }
