--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -43,7 +43,7 @@
   border-radius: 20px;
   padding: 50px;
   margin-right: 10px;
-  margin-left: 120px;
+  margin-left: 145px;
   margin-bottom: 50px;
   text-align: center;
 }
@@ -63,5 +63,33 @@ hr {
  height: 1px;
  margin-top: 1em;
  margin-bottom: 1em;
+}
+
+
+.card {
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  width: 300px;
+  margin-left: 50px;
+}
+
+.card > img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  position: top;
+}
+
+.scroll {
+  padding:4px;
+  width: 400px;
+  height: 450px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.card a {
+  color: black;
 }
 
