background image to show pages, form fixing and updated buttons

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="card-white">
 
     <div class="booking-details">
       <div class="painting-image">
@@ -19,25 +20,30 @@
         <% if @booking.status == "pending" %>
           <p>You have requested to book <%=@painting.name%> for the period of <%= @booking.start_date %> to <%= @booking.end_date %></p>
           <p>Your request is <%= @booking.status %> and awaiting approval from <%= @user.first_name %></p>
-          <%= link_to 'Make changes to your booking request', edit_booking_path(@booking) %><br>
-          <%= link_to 'Cancel my booking request', booking_path(@booking), method: :delete, data: { confirm: "Are you sure you wish to cancel your booking?" } %> <br>
+          <%= link_to 'Make changes to my booking request', edit_booking_path(@booking), class: "btn btn-outline-secondary" %><br>
+          <%= link_to 'Cancel my booking request', booking_path(@booking), method: :delete, data: { confirm: "Are you sure you wish to cancel your booking?" }, class: "btn btn-outline-secondary" %> <br>
 
         <% elsif @booking.status == "Approved" %>
           <p>All set! Your booking request for <%=@painting.name%> has been <%=@booking.status%> by <%=@user.first_name%>!</p>
           <p>Please collect your painting from <%= @painting.address %> on <%= @booking.start_date %></p>
           <p>The painting must be returned by <%= @booking.end_date %></p>
-          <div id="map"
-             style="width: 50%; height: 300px;"
-             data-markers="<%= @markers.to_json %>"
-             data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-          </div>
-          <%= link_to 'Make changes to your booking', edit_booking_path(@booking) %><br>
-          <%= link_to 'Cancel my booking', booking_path(@booking), method: :delete, data: { confirm: "Are you sure you wish to cancel your booking?" } %> <br>
+          <div class="row justify-content-center">
+            <div id="map"
+                  style="width: 50%; height: 300px;"
+                  data-markers="<%= @markers.to_json %>"
+                  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+            </div>
+        </div>
+
+          <%= link_to 'Make changes to my booking', edit_booking_path(@booking), class: "btn btn-light" %><br>
+          <%= link_to 'Cancel my booking', booking_path(@booking), method: :delete, data: { confirm: "Are you sure you wish to cancel your booking?" }, class: "btn btn-outline-secondary" %> <br>
         <% else %>
           <p>Unfortunately <%=@user.first_name%> has <%=@booking.status%> your booking request!</p>
           <%= link_to 'Booking another painting', paintings_path %>
+
         <% end %>
       <% end %>
     </div>
-    <%= link_to 'Return to your dashboard', dashboard_path %>
+    <%= link_to 'Return to my dashboard', dashboard_path, class: "btn btn-light" %>
+ </div>
 </div>
