--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -12,7 +12,7 @@
 
 .container {
   width: 700px;
-  margin: 40px auto;
+  margin: 0px auto;
   padding-bottom: 200px;
 }
 
@@ -21,3 +21,16 @@
   margin-bottom: 10px;
 }
 
+.btn-outline-secondary {
+  margin-bottom: 10px;
+}
+
+.container-show {
+  background-position: center;
+  background-size: cover;
+  // opacity: 0.3;
+}
+
+// .booking-btns btn {
+//   margin-top: 5px;
+// }
