--- a/app/views/paintings/show.html.erb
+++ b/app/views/paintings/show.html.erb
@@ -1,7 +1,8 @@
-<div class="container pt-5">
+<div class="container-show" style="background-image: linear-gradient(rgba(230,230,230,0.5), rgba(0,0,0,0.2)), url('<%= cl_image_path @painting.photo.key %>')">
+<div class="container pt-5" >
 
 
-      <div class="card-white" id="introduction" >
+      <div class="card-white" id="introduction">
 
         <div class="row justify-content-center">
           <h1><%= @painting.name %></h1>
@@ -60,4 +61,5 @@
             <%= link_to 'Back', paintings_path, class: "btn btn-light" %>
         </div>
       </div>
+</div>
 </div>
