--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -1,30 +1,25 @@
+<div class="info">
 <div class="row justify-content-center">
   <h1>Find the right painting for you.</h1>
 </div>
 
-<div>
-<%= form_tag paintings_path, method: :get do %>
-  <%= text_field_tag :query,
+<div class="search-bar">
+  <%= form_tag paintings_path, method: :get, class: "d-flex align-items-center" do %>
+    <%= text_field_tag :query,
     params[:query],
-    class: "form-control",
-    placeholder: "Find an artist"
-  %>
+    class: "form-control index-page-search",
+    placeholder: "Search by artist or location"
+    %>
   <%= submit_tag "Search", class: "btn btn-primary" %>
-<% end %>
+  <% end %>
 </div>
-
+</div>
 <!-- <div class="container mt-3 mb-5"> -->
 
-  <div class="card-container d-flex">
+  <div class="card-container d-flex justify-content-around w-60 m-auto">
 
-  <div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
 
-  </div>
 
-      <ul>
         <div class="cards">
         <% @paintings.each do |painting| %>
           <div class="card-product">
@@ -42,16 +37,18 @@
                   <h6> £<%= painting.price %> /per day</h6>
               </div>
             </div>
-
                 <%= link_to 'More details', painting_path(painting), class: "btn btn-dark"%>
-
         </div>
          <% end %>
         </div>
-      </ul>
-
-
+        <div style="position: relative; width: 350;"></div>
+  <div id="map"
+     style="width: 300px; height: 400px; margin-top: 20px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
+
+</div>
 
 <!-- </div> -->
 
