--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card-white">
+  <div class="card-white justify-content-center d-flex">
       <div class="col-12 col-sm-10 ">
         <div class="form-title">
           <h2>Sign up</h2>
