--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -8,7 +8,7 @@
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
   color: white;
   border-radius: 10px;
-  background: url(backgrounddashboard.jpeg);
+  background: url(colour.png);
   margin-bottom: 80px;
 }
 
