--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,7 +6,7 @@
 
 
 
-    <div class="first-header">
+    <div class="first-header" style="background-image: url('<%= asset_path "colours.jpg" %>')">>
       <h1>Hi <%= @user.first_name %>! </h1>
 
       <br> <h3> Welcome to your <strong>Dashboard</strong></h3>
